Delete sample (#19)
* Update OpenAPI generator

* Delete sample endpoint

* Fixed requirement to avoid currently open issue: https://github.com/p1c2u/openapi-spec-validator/issues/126

* Change return status

* Update specs
